deploy/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: javaliberty
spec:
  path: /
  to:
    kind: Service
    name: javalibertyapp-service
  port:
    targetPort: http
